--- a/client/public/index.html
+++ b/client/public/index.html
@@ -64,7 +64,8 @@
     -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <!-- Compiled and minified JavaScript -->
+    <script src="https://unpkg.com/formik/dist/formik.umd.production.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
         <!--
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="js/materialize.js"></script>
